<resources>
    <string name="app_name">Photo Editor</string>
    <string name="gallery">Gallery</string>
    <string name="slider_desc">Brightness Filter</string>
    <string name="brightness_filter">Brightness Filter</string>
    <string name="save">Save</string>
    <string name="contrast_filter">Contrast Filter</string>
    <string name="gamma">Gamma</string>
    <string name="saturation">Saturation</string>
</resources>
